--- a/public/screen.css
+++ b/public/screen.css
@@ -1,8 +1,53 @@
-html {
-  text-size-adjust: 100%;
-}
-
 body {
   margin: 0;
   font: 16px / 1 sans-serif;
+}
+
+.header {
+  width: 100%;
+  height: auto;
+  background-color: white
+  
+  }
+
+.headerContent {
+  width: 1024px;
+  height: 5px;
+  margin: 0 auto;
+  background: transparent
+ 
+}
+
+.headerBreak {
+  width: 60%;
+  height: 0;
+  border-top: 2px solid red; 
+
+}
+
+.nav {
+       height: 60px;
+       background: #c9c9c9;
+       border-top: 3px solid red
+}
+.nav ul {
+      margin:0;
+      padding: 0
+}
+
+.nav ul li {
+      list-style: none;
+}
+
+.nav ul li a {
+      text-decoration: none;
+      float: left;
+      display: block;
+      padding: 10px 10px;
+      color: black
+  
+}
+
+.nav ul li a:hover {
+      color: red;
 }
