"Hello, App App!"

--- a/public/screen.css
+++ b/public/screen.css
@@ -1,53 +1,84 @@
 body {
   margin: 0;
-  font: 16px / 1 sans-serif;
+  font: 14px / 1 sans-serif;
 }
 
-.header {
-  width: 100%;
-  height: auto;
-  background-color: white
-  
-  }
+header {
+  height: 51px;
+  background: #dcdce2;
+  border-top: 2px solid red
+}
 
 .headerContent {
-  width: 1024px;
-  height: 5px;
-  margin: 0 auto;
-  background: transparent
- 
-}
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 51px;
+ }
 
-.headerBreak {
-  width: 60%;
-  height: 0;
-  border-top: 2px solid red; 
+.headerContent ul {
+    display: flex; 
+    list-style: none; 
+    font-size: 18px;
+        }
 
-}
-
-.nav {
-       height: 60px;
-       background: #c9c9c9;
-       border-top: 3px solid red
-}
-.nav ul {
-      margin:0;
-      padding: 0
-}
-
-.nav ul li {
-      list-style: none;
-}
-
-.nav ul li a {
+ li {
+   padding: 10px
+   
+     
+ }
+.headerContent ul a {
       text-decoration: none;
-      float: left;
-      display: block;
-      padding: 10px 10px;
-      color: black
+      color: black  
+}
+
+.headerContent ul a:hover {
+      color: red;
+      
+}
+
+.Title{
+      text-align: center;
+      color: #1d1d1d;
+      font-size: 20px;
+       margin:0;
+      padding:0;
+     
+}
+
+.titleText {
+    font-weight: bold;
+}
+
+.redtext {
+        color: red;
+        font-weight: bold;
+       
+}
+.subtext {
+        font-weight: bold;
+    
+}
+.Images {
+  display: flex;
+  justify-content: center;
   
 }
+.Images > div {
+	padding: 5px;
+}
 
-.nav ul li a:hover {
-      color: red;
+.column {
+	display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.column > div {
+	width: 10%;
+	padding: 5px;
+}
+
+.column > div:first-child {
+	margin-right: 20px;
 }
